# partner

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: list.rs
src/: cli.rs  ext.rs  lib.rs  logic.rs  main.rs  partition.rs  ui.rs
src/tui/: cli.rs  logic.rs  main.rs  ui.rs
