[package]
name = "partner"
version = "0.1.0"
edition = "2024"

[dependencies]
libparted = "0.1.5"
ratatui = "0.29.0"
ratatui-elm = "0.1.0-alpha.3"
color-eyre = "0.6.5"
crossterm = "0.29.0"
throbber-widgets-tui = "0.8.0"
clap = { version = "4.5.41", features = ["derive"] }
byte-unit = "5.1.6"
ouroboros = "0.18.5"
