[package]
name = "partner"
version = "0.1.0"
edition = "2024"
exclude = ["images", "README.md", "flake.*", ".envrc"]

[dependencies]
libparted = "0.1.5"
ratatui = "0.29.0"
ratatui-elm = "1.1.1"
color-eyre = "0.6.5"
throbber-widgets-tui = "0.9.0"
clap = { version = "4.5.52", features = ["derive"] }
byte-unit = "5.1.6"
ouroboros = "0.18.5"
tokio = { version = "1.48.0", features = ["sync"] }
tokio-stream = { version = "0.1.17", default-features = false }
proc-mounts = "0.3.0"
strum = { version = "0.27.0", features = ["derive"] }
thiserror = "2.0.17"
nix = { version = "0.30.1", features = ["user"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
itertools = "0.14.0"
tui-input = "0.14.0"

[[bin]]
name = "partner"
path = "src/tui/main.rs"
